
4.80  2014-02-12
  - Merged Mojo::DOM::Node into Mojo::DOM.
  - Added next_sibling and previous_sibling methods to Mojo::DOM.
  - Added last method to Mojo::Collection.
  - Improved many methods in Mojo::DOM to work with all node types.
  - Improved Mojo::DOM::HTML performance.
  - Fixed list parsing bug in Mojo::DOM::HTML.

4.79  2014-02-11
  - Improved not found page to show request information and the exact path
    used for route matching.

4.78  2014-02-08
  - Deprecated Mojo::Util::get_line.
  - Fixed ";" handling in Mojo::Parameters to be compliant with the HTML
    Living Standard.
  - Fixed case sensitivity bug in Mojolicious::Types.

4.77  2014-02-06
  - Deprecated Mojo::DOM::text_after and Mojo::DOM::text_before in favor of
    Mojo::DOM::contents.
  - Deprecated Mojo::DOM::content_xml and Mojo::DOM::replace_content in favor
    of Mojo::DOM::content.
  - Deprecated Mojo::DOM::to_xml in favor of Mojo::DOM::to_string.
  - Added wrap_content method to Mojo::DOM.
  - Added tablify function to Mojo::Util.
  - Improved wrap method in Mojo::DOM to allow wrapping of the root node.

4.76  2014-02-04
  - Added wrap method to Mojo::DOM.
  - Updated IO::Socket::IP requirement to 0.20 for certain bug fixes.
  - Improved Mojo::DOM::HTML to generate better HTML.

4.75  2014-02-02
  - Fixed and readded support for permessage-deflate WebSocket compression.
    (Mikey, sri)

4.74  2014-02-02
  - Added all_contents method to Mojo::DOM.
  - Removed support for permessage-deflate WebSocket compression, since there
    have been too many problems with Chrome.

4.73  2014-02-01
  - Improved xml_escape performance significantly.
  - Improved html_unescape and url_unescape performance.
  - Fixed Mojo::UserAgent::Transactor to handle redirects more like most
    common browsers.

4.72  2014-01-29
  - Added accepts, template_for and template_handler methods to
    Mojolicious::Renderer.
  - Added accepts helper to Mojolicious::Plugin::DefaultHelpers.