@@ -4,7 +4,8 @@
   - Added next_sibling and previous_sibling methods to Mojo::DOM.
   - Added last method to Mojo::Collection.
   - Improved many methods in Mojo::DOM to work with all node types.
-  - Improved Mojo::DOM::HTML performance.
+  - Improved Mojo::DOM::HTML to handle slash between attributes more
+    gracefully.
   - Fixed list parsing bug in Mojo::DOM::HTML.
 
 4.79  2014-02-11
